--- a/bluefish/po/ru.po
+++ b/bluefish/po/ru.po
@@ -5,16 +5,16 @@
 # translation of ru.po to
 # translation of ru.po to Russian
 # Russian language file for Bluefish.
-# Copyright (C) 2000,2003 Free Software Foundation, Inc.
+# Copyright (C) 2000,2003,2004 Free Software Foundation, Inc.
 # Eugene Rupakov <rupakov@jet.msk.su>, 2003
 #  <taurus@croco.net>, 2003
-# Eugene Rupakov <taurus@croco.net>, 2003
+# Eugene Rupakov <taurus@croco.net>, 2003,2004
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: ru\n"
 "POT-Creation-Date: 2004-02-25 16:08+0100\n"
-"PO-Revision-Date: 2003-11-19 22:53+0300\n"
+"PO-Revision-Date: 2004-03-14 21:59+0300\n"
 "Last-Translator: Eugene Rupakov <taurus@croco.net>\n"
 "Language-Team: Русский <ru@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -35,10 +35,20 @@ msgid ""
 "\n"
 "This version of bluefish was compiled with the following options:\n"
 msgstr ""
+"Bluefish -- это редактор для опытных Web-дизайнеров и программистов. Он "
+"поддерживает множество языков программирования и разметки; но наиболее удобен, "
+"в первую очередь, для динамических и интерактивных Web-сайтов. Bluefish является "
+"проектом разработчиков-приверженцев движения Open Source и распространяется "
+"по лицензии GPL.\n"
+"\n"
+"За дополнительной информацией обращайтесь на Web-сайт Bluefish по адресу "
+"http://bluefish.openoffice.n/\n"
+"\n"
+"Эта версия Bluefish была собрана со следующими опциями:\n"
 
 #: ../src/about.c:121
 msgid "\n"
-msgstr ""
+msgstr "\n"
 
 #: ../src/about.c:122
 msgid ""
@@ -79,6 +89,38 @@ msgid ""
 "\n"
 "Thanks to all who helped making this software available.\n"
 msgstr ""
+"Ведущий разработчик проекта:\n"
+"  Olivier Sessink <olivier@bluefish.openoffice.nl>\n"
+"\n"
+"Разработчики текущей версии:\n"
+"  Jim Hayward <jimhayward@linuxexperience.com>\n"
+"  Oskar ¿wida <swida@aragorn.pb.bialystok.pl>\n"
+"  Christian Tellefsen <christian@tellefsen.net>\n"
+"  Eugene Morenko(More) <more@irpin.com>\n"
+"\n"
+"Разработчики предыдущих версий:\n"
+"  Chris Mazuc\n"
+"  Neil Millar\n"
+"  Gero Takke\n"
+"  Bo Forslund\n"
+"  David Arno\n"
+"  Pablo De Napoli\n"
+"  Santiago Capel Torres\n"
+"  Rasmus Toftdahl Olesen <rto@pohldata.dk>\n"
+"  Roland Steinbach <roland@netzblick.de>\n"
+"  Christian Tellefsen <chris@tellefsen.net>\n"
+"  Antti-Juhani Kaijanaho\n"
+"\n"
+"Ответственные за сборку пакетов:\n"
+"  Debian:   Davide Puricelli <evo@debian.org>\n"
+"  Redhat:   Matthias Haase <matthias_haase@bennewitz.com>\n"
+"  Mandrake: Todd Lyons <todd@mrball.net>\n"
+"\n"
+"Если у Вас есть информация о ком-нибудь, не вошедшем в список, пожалуйста, сообщите об этом "
+"по адресу\n"
+"<bluefish@bluefish.openoffice.nl>\n"
+"\n"
+"Благодарим всех, кто помог сделать этот проект доступным.\n"
 
 #: ../src/about.c:159
 msgid ""
@@ -130,10 +172,57 @@ msgid ""
 "   <barathee@yahoo.com>\n"
 "\n"
 msgstr ""
+"Команда переводчиков:\n"
+"\n"
+"  Brazilian Portuguese - Anderson Rocha\n"
+"   <anderson@maxlinux.com.br>\n"
+"\n"
+"  Chinese - Ting Yang (Dormouse)\n"
+"   <mouselinux@163.com>\n"
+"\n"
+"  Danish - Rasmus Toftdahl Olesen\n"
+"   <rto@pohldata.dk>\n"
+"\n"
+"  Finnish - Juho Roukala\n"
+"   <j.mr@luukku.com>\n"
+"\n"
+"  French - Roméo Viu-Berges\n"
+"   <apostledemencia@free.fr>\n"
+"\n"
+"  German - Roland Steinbach\n"
+"   <roland@netzblick.de>\n"
+"\n"
+"  Hungarian - Péter Sáska\n"
+"   <sasek@ccsystem.hu>\n"
+"\n"
+"  Italian - Stefano Canepa\n"
+"   <sc@linux.it>\n"
+"\n"
+"  Polish - Oskar Swida\n"
+"   <swida@aragorn.pb.bialystok.pl>\n"
+"\n"
+"  Portuguese - Lopo Pizarro\n"
+"   <lopopizarro@netcabo.pt>\n"
+"\n"
+"  Русский- Евгений Рупаков\n"
+"   <rupakov@jet.msk.su>\n"
+"\n"
+"  Serbian - Marko Milenovic\n"
+"   <raven@sbb.co.yu>\n"
+"\n"
+"  Spanish - Walter Oscar Echarri\n"
+"   <wecharri@infovia.com.ar>\n"
+"\n"
+"  Swedish - David Smeringe\n"
+"   <david.smeringe@telia.com>\n"
+"\n"
+"  Tamil - Murugapandian Barathee\n"
+"   <barathee@yahoo.com>\n"
+"\n"
 
 #: ../src/about.c:192
 msgid "About Bluefish"
-msgstr ""
+msgstr "О программе Bluefish"
 
 #: ../src/about.c:223 ../src/fref.c:1309 ../src/fref.c:1603 ../src/fref.c:1688
 #: ../src/fref.c:1715 ../src/fref.c:2129
@@ -142,15 +231,15 @@ msgstr "Информация"
 
 #: ../src/about.c:224
 msgid "Authors"
-msgstr ""
+msgstr "Авторы"
 
 #: ../src/about.c:225
 msgid "Translators"
-msgstr ""
+msgstr "Переводчики"
 
 #: ../src/authen.c:73
 msgid "Authentication required"
-msgstr ""
+msgstr "Необходима авторизация"
 
 #: ../src/authen.c:84
 #, c-format
@@ -159,15 +248,17 @@ msgid ""
 "\n"
 "Realm is %s"
 msgstr ""
+"Необходима авторизация для %s\n"
+"\n"
+"Realm: %s"
 
 #: ../src/authen.c:90
-#, fuzzy
 msgid "Username:"
-msgstr "Переименовать"
+msgstr "Имя пользователя:"
 
 #: ../src/authen.c:95
 msgid "Password:"
-msgstr ""
+msgstr "Пароль:"
 
 #: ../src/bfspell.c:346
 msgid "Check Spelling"
@@ -322,20 +413,18 @@ msgid "_Description:"
 msgstr "_Описание"
 
 #: ../src/bookmark.c:461
-#, fuzzy, c-format
+#, c-format
 msgid "You already have a bookmark named %s!"
-msgstr "У Вас здесь уже есть закладка!"
+msgstr "У Вас уже есть закладка с меткой %s!"
 
 #: ../src/bookmark.c:537
-#, fuzzy, c-format
+#, c-format
 msgid "Could not find the file \"%s\"."
-msgstr ""
-"Не удается записать файл:\n"
-"\""
+msgstr "Не удается найти файл \"%s\"."
 
 #: ../src/bookmark.c:538
 msgid "This bookmark is set in a file that no longer exists."
-msgstr ""
+msgstr "Эта закладка установлена на файл, который больше не существует."
 
 #: ../src/bookmark.c:542
 msgid "Bookmarked file is closed"
@@ -346,24 +435,21 @@ msgid "Do you want to open it?"
 msgstr "Вы уверены, что хотите открыть его?"
 
 #: ../src/bookmark.c:584
-#, fuzzy, c-format
+#, c-format
 msgid "Do you really want to remove %s?"
-msgstr "Вы уверены, что хотите открыть его?"
+msgstr "Вы действительно хотите удвлить %s?"
 
 #: ../src/bookmark.c:585
-#, fuzzy
 msgid "Delete permanent bookmark."
-msgstr "Добавить постоянную закладку"
+msgstr "Удалить постоянную закладку."
 
 #: ../src/bookmark.c:604
-#, fuzzy
 msgid "Rename permanent bookmark"
-msgstr "Добавить постоянную закладку"
+msgstr "Переименовать постоянную закладку"
 
 #: ../src/bookmark.c:606
-#, fuzzy
 msgid "Rename temporary bookmark"
-msgstr "Добавить временную закладку"
+msgstr "Переименовать временную закладку"
 
 #: ../src/bookmark.c:620
 msgid "Goto bookmark"
@@ -394,6 +480,8 @@ msgid ""
 "Cannot add bookmarks in nameless files.\n"
 "Please, save the file first."
 msgstr ""
+"Невозможно установить закладки в безымянном файле\n"
+"Пожалуйста, сначала сохраните файл."
 
 #: ../src/bookmark.c:959
 msgid "You already have a bookmark here!"
@@ -408,17 +496,14 @@ msgid "Are you sure?"
 msgstr "Вы уверены?"
 
 #: ../src/bookmark.c:1038
-#, fuzzy
 msgid "Delete all permanent bookmarks."
-msgstr "Удалить все временные закладки"
+msgstr "Удалить все постоянные закладки."
 
 #: ../src/bookmark.c:1038
-#, fuzzy
 msgid "Are you REALLY sure?"
-msgstr "Вы уверены?"
+msgstr "Вы абсолютно уверены?"
 
 #: ../src/bookmark.c:1049 ../src/bookmark.c:1052 ../src/document.c:1937
-#, fuzzy
 msgid "Add permanent bookmark"
 msgstr "Добавить постоянную закладку"
 
@@ -428,55 +513,64 @@ msgid ""
 "Character count changed in file\n"
 " %s."
 msgstr ""
+"Изменилось количество символов в файле\n"
+" %s."
 
 #: ../src/bookmark.c:1084
 msgid "Bookmarks positions can be incorrect."
-msgstr ""
+msgstr "Расположение закладок может быть ошибочным."
 
 #: ../src/document.c:253 ../src/gui.c:928 ../src/gui.c:929
 msgid "/Document/Highlight Syntax"
 msgstr "/Документ/Подсветка синтаксиса"
 
 #: ../src/document.c:693
-#, fuzzy
 msgid "Name: "
-msgstr "Имя:"
+msgstr "Имя: "
 
 #: ../src/document.c:694
-#, fuzzy
 msgid ""
 "\n"
 "Type: "
-msgstr "_Тип:"
+msgstr ""
+"\n"
+"Тип: "
 
 #: ../src/document.c:695
-#, fuzzy
 msgid ""
 "\n"
 "Encoding: "
-msgstr "Кодировка"
+msgstr ""
+"\n"
+"Кодировка: "
 
 #: ../src/document.c:698
 msgid ""
 "\n"
 "Size (on disk): "
 msgstr ""
+"\n"
+"Размер (на диске): "
 
 #: ../src/document.c:698
 msgid " bytes"
-msgstr ""
+msgstr " байт"
 
 #: ../src/document.c:703
 msgid ""
 "\n"
 "Permissions: "
 msgstr ""
+"\n"
+"Права доступа: "
 
 #: ../src/document.c:709
 msgid ""
 "\n"
 "Last modified: "
 msgstr ""
+"\n"
+"Дата модификации: "
 
 #: ../src/document.c:735
 #, c-format
@@ -511,12 +605,11 @@ msgstr "Заменить"
 
 #: ../src/document.c:1930
 msgid "Find"
-msgstr ""
+msgstr "Найти"
 
 #: ../src/document.c:1947
-#, fuzzy
 msgid "Edit color"
-msgstr "Редактор"
+msgstr "Редактировать цвет"
 
 #: ../src/document.c:1955
 msgid "Edit tag"
@@ -548,9 +641,8 @@ msgid "File backup failure"
 msgstr "Ошибке резервного копирования файла"
 
 #: ../src/document.c:2138
-#, fuzzy
 msgid "_Continue save in UTF-8"
-msgstr "Про_должить сохранение"
+msgstr "Про_должить сохранение в UTF-8"
 
 #: ../src/document.c:2149
 #, c-format
@@ -560,10 +652,14 @@ msgid ""
 "\n"
 "Continue saving in UTF-8 encoding?"
 msgstr ""
+"Не удалось сконвертировать %s в кодировку %s. Перекодировка прекращена из-за ошибки в символе "
+"'%s' на строке %d, столбце %d\n"
+"\n"
+"Продолжить сохранение в кодировке UTF-8?"
 
 #: ../src/document.c:2150
 msgid "File encoding conversion failure"
-msgstr ""
+msgstr "Ошибка перекодировки файла."
 
 #: ../src/document.c:2285
 msgid "Previously: "
@@ -665,8 +761,7 @@ msgstr ""
 
 #: ../src/document.c:2514
 msgid "Do you want to save the changes made to this untitled file?"
-msgstr ""
-"Вы уверены, что хотите сохранить изменения, внесенные в этот безымянный файл?"
+msgstr "Вы уверены, что хотите сохранить изменения, внесенные в этот безымянный файл?"
 
 #: ../src/document.c:2518
 msgid "Do_n't save"
@@ -956,8 +1051,7 @@ msgstr "Ошибка"
 msgid ""
 "Perhaps you didn't load a reference, or you did not select a reference to "
 "search in."
-msgstr ""
-"Возможно, вы не загрузили справочник, или не выбрали справочник для поиска"
+msgstr "Возможно, вы не загрузили справочник, или не выбрали справочник для поиска"
 
 #: ../src/fref.c:2116
 msgid "Show info window"
@@ -981,19 +1075,16 @@ msgid "Select files"
 msgstr "Выберите файлы"
 
 #: ../src/gui.c:217
-#, fuzzy
 msgid "Filebrowser"
 msgstr "Просмотр файлов"
 
 #: ../src/gui.c:218
-#, fuzzy
 msgid "Function reference"
-msgstr "Редактирование настроек"
+msgstr "Описание функций"
 
 #: ../src/gui.c:219
-#, fuzzy
 msgid "Bookmarks"
-msgstr "/_Закладки"
+msgstr "Закладки"
 
 #: ../src/gui.c:244 ../src/menu.c:914
 msgid "/View/View Left Panel"
@@ -1188,17 +1279,14 @@ msgid "Form..."
 msgstr "Форма..."
 
 #: ../src/gui.c:614
-#, fuzzy
 msgid "Input Button..."
 msgstr "Кнопка..."
 
 #: ../src/gui.c:615
-#, fuzzy
 msgid "Input Text..."
-msgstr "Кнопка..."
+msgstr "Текстовое поле..."
 
 #: ../src/gui.c:616
-#, fuzzy
 msgid "Input Hidden..."
 msgstr "Скрытое поле..."
 
@@ -1207,12 +1295,10 @@ msgid "Textarea..."
 msgstr "Поле ввода..."
 
 #: ../src/gui.c:618
-#, fuzzy
 msgid "Input Radio Button..."
 msgstr "Переключатель..."
 
 #: ../src/gui.c:619
-#, fuzzy
 msgid "Input Check Box..."
 msgstr "Флажок..."
 
@@ -1229,9 +1315,8 @@ msgid "Option group..."
 msgstr "Группа вариантов выбора..."
 
 #: ../src/gui.c:623
-#, fuzzy
 msgid "Button..."
-msgstr "Кнопка"
+msgstr "Кнопка..."
 
 #: ../src/gui.c:624
 msgid "Quick List..."
@@ -1458,9 +1543,8 @@ msgid "/Document/Line Numbers"
 msgstr "/Документ/Номера строк"
 
 #: ../src/gui.c:933
-#, fuzzy
 msgid "/Document/Auto Close HTML tags"
-msgstr "/Документ/Ставить отступы автоматически"
+msgstr "/Документ/Автоматически закрывать теги HTML"
 
 #: ../src/gui.c:1065
 msgid "Do_n't Save"
@@ -1571,9 +1655,8 @@ msgid "Quick Anchor"
 msgstr "Заготовка ссылки"
 
 #: ../src/html.c:554 ../src/html_form.c:780
-#, fuzzy
 msgid "Attributes"
-msgstr "Атрибуты/Параметры"
+msgstr "Атрибуты"
 
 #: ../src/html.c:568
 msgid "_HREF:"
@@ -1878,34 +1961,30 @@ msgid "Link"
 msgstr "Ссылка"
 
 #: ../src/html.c:2032
-#, fuzzy
 msgid "_Href:"
-msgstr "В_резка:"
+msgstr "_Href:"
 
 #: ../src/html.c:2038
 msgid "Href_lang:"
-msgstr ""
+msgstr "Href_lang:"
 
 #: ../src/html.c:2052
 msgid "_Forward Relation:"
-msgstr ""
+msgstr "Ссылка вперед:"
 
 #: ../src/html.c:2056
 msgid "_Reverse Relation:"
-msgstr ""
+msgstr "_Ссылка назад:"
 
 #: ../src/html.c:2067
-#, fuzzy
 msgid "Media:"
-msgstr "Meta"
+msgstr "Носитель:"
 
 #: ../src/html.c:2071
-#, fuzzy
 msgid "L_ang:"
-msgstr "Язык:"
+msgstr "_Язык:"
 
 #: ../src/html.c:2075
-#, fuzzy
 msgid "_Custom:"
 msgstr "Про_чее:"
 
@@ -2008,10 +2087,9 @@ msgstr "Группа параметров"
 
 #: ../src/html_form.c:775
 msgid "Input"
-msgstr ""
+msgstr "Ввод"
 
 #: ../src/html_form.c:803
-#, fuzzy
 msgid "_Checked:"
 msgstr "В_ключен:"
 
@@ -2020,33 +2098,28 @@ msgid "Max _Length:"
 msgstr "Максимальная _длина:"
 
 #: ../src/html_form.c:816
-#, fuzzy
 msgid "_Accept:"
-msgstr "_Действие:"
+msgstr "_Принимать:"
 
 #: ../src/html_form.c:820
-#, fuzzy
 msgid "C_ustom:"
 msgstr "Про_чее:"
 
 #: ../src/html_form.c:832
-#, fuzzy
 msgid "On_Focus:"
-msgstr "OnMouse_Up:"
+msgstr "On_Focus:"
 
 #: ../src/html_form.c:836
 msgid "On_Blur:"
-msgstr ""
+msgstr "On_Blur:"
 
 #: ../src/html_form.c:840
-#, fuzzy
 msgid "On_Select:"
-msgstr "Панель в_ыбора:"
+msgstr "On_Select:"
 
 #: ../src/html_form.c:844
-#, fuzzy
 msgid "On_Change:"
-msgstr "_Изменить на:"
+msgstr "On_Change:"
 
 #: ../src/html_form.c:884
 msgid "Button"
@@ -2197,9 +2270,8 @@ msgid "/File/_Open..."
 msgstr "/Файл/_Открыть..."
 
 #: ../src/menu.c:320
-#, fuzzy
 msgid "/File/Open recen_t"
-msgstr "/Файл/Открыть недавние"
+msgstr "/Файл/Открыть не_давние"
 
 #: ../src/menu.c:321
 msgid "/File/Open recent/tearoff1"
@@ -2230,7 +2302,6 @@ msgid "/File/Save _As..."
 msgstr "/Файл/Сохранить к_ак"
 
 #: ../src/menu.c:334
-#, fuzzy
 msgid "/File/Sav_e All"
 msgstr "/Файл/Сохранить _все"
 
@@ -2339,9 +2410,8 @@ msgid "/Edit/Replace Agai_n"
 msgstr "/Редактирование/Заменить да_лее"
 
 #: ../src/menu.c:363
-#, fuzzy
 msgid "/Edit/Replace special"
-msgstr "/Редактирование/О_собая замена"
+msgstr "/Редактирование/Особая замена"
 
 #: ../src/menu.c:364
 msgid "/Edit/Replace special/Tearoff1"
@@ -3112,7 +3182,6 @@ msgid "/Tags/List/tearoff1"
 msgstr "/Теги/Список/tearoff1"
 
 #: ../src/menu.c:559
-#, fuzzy
 msgid "/Tags/List/Unordered _List"
 msgstr "/Теги/Список/Не_упорядоченный список"
 
@@ -3121,12 +3190,10 @@ msgid "/Tags/List/_Ordered List"
 msgstr "/Теги/Список/У_порядоченный список"
 
 #: ../src/menu.c:561
-#, fuzzy
 msgid "/Tags/List/List Ite_m"
 msgstr "/Теги/Список/_Элемент списка"
 
 #: ../src/menu.c:562
-#, fuzzy
 msgid "/Tags/List/De_finition List"
 msgstr "/Теги/Список/Список опре_делений"
 
@@ -3135,12 +3202,10 @@ msgid "/Tags/List/Definition _Term"
 msgstr "/Теги/Список/_Термин определения"
 
 #: ../src/menu.c:564
-#, fuzzy
 msgid "/Tags/List/_Definition"
 msgstr "/Теги/Список/Опреде_ление"
 
 #: ../src/menu.c:565
-#, fuzzy
 msgid "/Tags/List/Men_u"
 msgstr "/Теги/Список/_Меню"
 
@@ -3313,19 +3378,16 @@ msgid "/Dialogs/Form/F_orm..."
 msgstr "/Диалоги/Форма/Форма... _o"
 
 #: ../src/menu.c:610
-#, fuzzy
 msgid "/Dialogs/Form/_Input..."
-msgstr "/Диалоги/Форма/_Кнопка..."
+msgstr "/Диалоги/Форма/_Элемент ввода..."
 
 #: ../src/menu.c:611
-#, fuzzy
 msgid "/Dialogs/Form/Input Buttons..."
-msgstr "/Диалоги/Форма/_Кнопка..."
+msgstr "/Диалоги/Форма/_Кнопки..."
 
 #: ../src/menu.c:612
-#, fuzzy
 msgid "/Dialogs/Form/Input Text..."
-msgstr "/Диалоги/Форма/Текст... _T"
+msgstr "/Диалоги/Форма/Текстовое поле... _T"
 
 #: ../src/menu.c:613
 msgid "/Dialogs/Form/Text_area..."
@@ -3344,18 +3406,16 @@ msgid "/Dialogs/Form/Option _Group..."
 msgstr "/Диалоги/Форма/_Группа вариантов выбора..."
 
 #: ../src/menu.c:617
-#, fuzzy
 msgid "/Dialogs/Form/_Button..."
 msgstr "/Диалоги/Форма/_Кнопка..."
 
 #: ../src/menu.c:644
-#, fuzzy
 msgid "/Dialogs/sep1"
-msgstr "/Диалоги/tearoff1"
+msgstr "/Диалоги/sep1"
 
 #: ../src/menu.c:645
 msgid "/Dialogs/_Edit tag under cursor..."
-msgstr ""
+msgstr "/Диалоги/Редактировать тэг под курсором..."
 
 #: ../src/menu.c:646
 msgid "/_Document"
@@ -3382,9 +3442,8 @@ msgid "/Document/sep1"
 msgstr "/Документ/sep1"
 
 #: ../src/menu.c:652
-#, fuzzy
 msgid "/Document/Auto Close H_TML tags"
-msgstr "/Документ/Ставить отступы автоматически"
+msgstr "/Документ/Автоматически закрывать тэги H_TML"
 
 #: ../src/menu.c:653
 msgid "/Document/_Wrap"
@@ -3411,9 +3470,8 @@ msgid "/Document/sep3"
 msgstr "/Документ/sep3"
 
 #: ../src/menu.c:659
-#, fuzzy
 msgid "/Document/Document Ty_pe"
-msgstr "/Документ/Тип документа"
+msgstr "/Документ/Ти_п документа"
 
 #: ../src/menu.c:660
 msgid "/Document/Document Type/tearoff1"
@@ -3565,11 +3623,11 @@ msgstr "/Внешние/tearoff1"
 
 #: ../src/menu.c:705
 msgid "/_Help"
-msgstr ""
+msgstr "/По_мощь"
 
 #: ../src/menu.c:706
 msgid "/Help/_About..."
-msgstr ""
+msgstr "/Помощь/О _программе..."
 
 #: ../src/menu.c:868
 msgid "/Document/Document Type"
@@ -3810,7 +3868,7 @@ msgstr "regex содержимого"
 
 #: ../src/preferences.c:591
 msgid "Auto close tags mode"
-msgstr ""
+msgstr "Режим автоматического закрытия тэгов"
 
 #: ../src/preferences.c:739 ../src/preferences.c:773
 msgid "Filefilter"
@@ -4285,16 +4343,15 @@ msgstr "Окно вывода"
 
 #: ../src/preferences.c:2047
 msgid "Servers"
-msgstr ""
+msgstr "Серверы"
 
 #: ../src/preferences.c:2049
-#, fuzzy
 msgid "Remote servers"
-msgstr "У_даленная директория:"
+msgstr "Внешние серверы"
 
 #: ../src/preferences.c:2054
 msgid "Zope compatibility mode"
-msgstr ""
+msgstr "Режим совместимости с Zope"
 
 #: ../src/project.c:62
 msgid "New project"
@@ -4342,14 +4399,12 @@ msgid "Project _Name:"
 msgstr "_Имя проекта:"
 
 #: ../src/project.c:369
-#, fuzzy
 msgid "_Basedir:"
 msgstr "Базовая _директория:"
 
 #: ../src/project.c:373
-#, fuzzy
 msgid "_Preview URL:"
-msgstr "Просмотр"
+msgstr "_Предпросмотр URL:"
 
 #: ../src/project.c:377
 msgid "_Template:"
@@ -4482,8 +4537,7 @@ msgstr "Заменить _на: "
 
 #: ../src/snr2.c:1329
 msgid "\\0 refers to the first subsearch_pattern, \\1 to the second etc."
-msgstr ""
-"\\0 указывает на первый шаблон вложенного поиска, \\1 на второй, и т.д."
+msgstr "\\0 указывает на первый шаблон вложенного поиска, \\1 на второй, и т.д."
 
 #: ../src/snr2.c:1344
 msgid "Beginning of document till end"
@@ -4539,8 +4593,7 @@ msgstr "Тип замены:"
 
 #: ../src/snr2.c:1386
 msgid "Patterns contain backslash escape sequences (\\n, \\t)"
-msgstr ""
-"Шаблоны содержат escape-последовательности с обратной дробью (\\n, \\t)"
+msgstr "Шаблоны содержат escape-последовательности с обратной дробью (\\n, \\t)"
 
 #: ../src/snr2.c:1387
 msgid "Match ca_se"
@@ -4735,3 +4788,4 @@ msgstr "Размер:"
 
 #~ msgid "Always highlight full document"
 #~ msgstr "Всегда подсвечивать синтаксис целого документа"
+
